<resources>
    <string name="app_name">MVVM_Generator_By_Jiwo</string>
    <string name="text_error">Error, Please try again</string>
    <string name="welcome_to_mvvm_file_folder_generator_by_jiwo">Welcome to MVVM File Folder Generator By Jiwo</string>
    <string name="first_fragment">First Fragment</string>
    <string name="second_fragment">Second Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="mvvm_android_generator">MVVM Android Generator</string>
    <string name="by_katili">By Katili Jiwo Adi Wiyono</string>
    <string name="background">background</string>
    <string name="simple_login_fragment">Simple Login Fragment</string>
    <string name="this_login_functionality_show_the_best_practice_in_using_the_architecture">this login functionality show the best practice in using the architecture</string>
    <string name="understood">Understood</string>
</resources>