<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ui.main.firstfragment.FirstFragment">

    <data>
        <variable
            name="viewModel"
            type="com.programmergabut.mvvm_generator_by_jiwo.ui.main.MainViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorDarkBackgroundGrey">


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="22dp"
            android:layout_marginTop="60dp"
            android:orientation="vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/tv_login_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mvvm_android_generator"
                android:textColor="@color/colorPrimary"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/tv_login_title_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_katili"
                android:textColor="@color/colorPrimary"
                android:textSize="17sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/simple_login_fragment"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:layout_marginBottom="50dp"
            android:background="@drawable/rounded_white_bg"
            android:orientation="vertical"
            android:padding="26dp">

            <EditText
                android:id="@+id/editText3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:autofillHints="@string/username"
                android:background="@drawable/rounded_white_edit_text"
                android:drawableEnd="@drawable/ic_baseline_person_24"
                android:hint="@string/username"
                android:inputType="text"
                android:padding="15dp"
                android:text="@{viewModel.user.username}" />

            <EditText
                android:id="@+id/editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:autofillHints="@string/password"
                android:background="@drawable/rounded_white_edit_text"
                android:drawableEnd="@drawable/ic_baseline_lock_24"
                android:hint="@string/password"
                android:inputType="text"
                android:padding="15dp"
                android:text="@{viewModel.user.password}" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="15dp"
                android:text="@string/login"
                android:textColor="@color/colorWhite" />
        </LinearLayout>

    </RelativeLayout>

</layout>